# crm-ticketing-system

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/api/: customers.py  notes.py  router.py  tickets.py
app/auth/: middleware.py  rbac.py  tokens.py
app/models/: storage.py
app/utils/: exceptions.py
scripts/: README.md  smoke.sh
ui/: Dockerfile  README.md  app.py  gradio_app.py  start.sh
